# frost-tune

./: .gitignore  .graphifyignore  AGENTS.md  CONTRIBUTING_DEVICES.md  Cargo.toml  LICENSE  M3_COMPLIANCE_EXECUTION_TODO.md  Makefile  PKGBUILD  POLKIT_PLAN.md  README.md  TODO.md  UI_USABILITY_TODO.md  opencode.json
.antigravitycli/: 1b01c0ad-c49d-43e1-b7f5-cf49f95eda22.json
.gemini/: settings.json
.github/: dependabot.yml
.github/scripts/: update_badges.py
.github/workflows/: cache-warm.yml  ci.yml  release.yml  update-badges.yml
.pi/skills/dsp-expert/: SKILL.md
.pi/skills/hid-safety-officer/: SKILL.md
.pi/skills/material-ui-auditor/: SKILL.md
assets/: frost-tune.desktop
experiments/: dsp_verify.py
graphify-out/: GRAPH_REPORT.md
packaging/arch/: PKGBUILD  frost-tune.install
packaging/arch-bin/: PKGBUILD
packaging/arch/pkg/frost-tune/: .BUILDINFO  .MTREE  .PKGINFO
packaging/arch/src/frost-tune-0.8.1/: opencode.json
packaging/arch/src/frost-tune-0.8.1/.github/workflows/: cache-warm.yml
packaging/arch/src/frost-tune-0.8.1/packaging/arch/: PKGBUILD
packaging/arch/src/frost-tune-0.8.1/src/hardware/: protocol.rs
packaging/arch/src/frost-tune-0.8.1/src/models/: filter.rs  mod.rs
packaging/arch/src/frost-tune-0.8.1/src/ui/: state.rs
packaging/arch/src/frost-tune-0.8.1/src/ui/update/: connection.rs  editor.rs  profiles.rs
packaging/arch/src/frost-tune-0.8.1/tests/: token_consistency.rs
packaging/arch/src/frost-tune-0.8.2/: .gitignore  AGENTS.md  Cargo.toml  README.md
packaging/arch/src/frost-tune-0.8.2/.github/workflows/: release.yml
packaging/arch/src/frost-tune-0.8.2/packaging/arch-bin/: PKGBUILD
packaging/arch/src/frost-tune-0.8.2/src/: autoeq.rs
packaging/arch/src/frost-tune-0.8.2/src/hardware/: dsp.rs  helper_server.rs  mod.rs  packet_builder.rs  pipeline.rs  protocol.rs
packaging/arch/src/frost-tune-0.8.2/src/models/: constants.rs
packaging/arch/src/frost-tune-0.8.2/src/ui/: main_window.rs  theme.rs
packaging/arch/src/frost-tune-0.8.2/tests/: token_consistency.rs
packaging/arch/src/frost-tune-0.8.3/: .gitignore  AGENTS.md
packaging/arch/src/frost-tune-0.8.3/packaging/arch-bin/: PKGBUILD
packaging/arch/src/frost-tune-0.8.3/packaging/debian/: postinst
packaging/arch/src/frost-tune-0.8.3/src/: autoeq.rs  diagnostics.rs  storage.rs
packaging/arch/src/frost-tune-0.8.3/src/hardware/: dsp.rs  hid.rs  protocol.rs
packaging/arch/src/frost-tune-0.8.3/src/models/: ipc.rs  mod.rs
packaging/arch/src/frost-tune-0.8.3/src/ui/: messages.rs  state.rs  theme.rs
packaging/linux/: org.frosttune.hid.policy
packaging/udev/: 99-frost-tune.rules
src/: autoeq.rs  diagnostics.rs  error.rs  lib.rs  main.rs  models.rs  probe.rs  storage.rs
src/core/: autoeq.rs  ipc.rs  mod.rs
src/core/device/: capabilities.rs  device.rs  io.rs  mod.rs  profile.rs  protocol.rs  registry.rs  timing.rs  tp35pro.rs
src/core/eq/: constants.rs  filter.rs  iir_math.rs  mod.rs
src/hardware/: device_io.rs  dsp.rs  elevated_transport.rs  helper_ipc.rs  helper_server.rs  hid.rs  ipc_types.rs  mod.rs  operations.rs  packet_builder.rs  packet_format.rs  pipeline.rs  protocol.rs  registry.rs  transport.rs  usb_worker.rs  worker.rs
src/hardware/devices/: mod.rs  tp35pro.rs  walkplay.rs  walkplay_protocol.rs
src/hardware/dsp/: mod.rs
src/hardware/worker/: backend.rs  connection.rs  discovery.rs  local_thread.rs  mod.rs  ops.rs  state.rs
src/models/: constants.rs  device.rs  filter.rs  ipc.rs  mod.rs
src/service/: hardware.rs  mod.rs  preset.rs
src/storage/: diagnostics.rs  mod.rs  paths.rs  profiles.rs  settings.rs
src/ui/: graph.rs  layout.rs  main_window.rs  messages.rs  mod.rs  modals.rs  state.rs  subscriptions.rs  theme.rs  tokens.rs  update.rs
src/ui/components/: autoeq.rs  connection.rs  diagnostics.rs  editor.rs  mod.rs  profiles.rs
src/ui/update/: autoeq.rs  connection.rs  editor.rs  hardware.rs  mod.rs  profiles.rs
src/ui/views/: autoeq.rs  bands.rs  confirm_dialog.rs  diagnostics.rs  graph_panel.rs  header.rs  mod.rs  preamp.rs  presets_preamp.rs  status_banner.rs  tools_panel.rs
tests/: autoeq_edge_cases.rs  protocol.rs  token_consistency.rs  ui_state.rs  worker.rs  worker_ipc.rs
wix/: main.wxs
(+21 files in other folders)
