[package]
name = "frost-tune"
version = "0.5.2"
edition = "2021"
authors = ["Bukutsu"]
description = "Native cross-platform parametric EQ editor for USB DACs. Built with Rust and Iced."
license = "MIT"
default-run = "frost-tune"

[dependencies]
iced = { version = "0.14", features = ["tokio", "canvas"] }
log = "0.4"
env_logger = "0.11"
thiserror = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["rt-multi-thread", "sync", "time"] }
chrono = "0.4"
rfd = "0.14"
dirs = "6.0"

[target.'cfg(target_os = "linux")'.dependencies]
hidapi = { version = "2.6", default-features = false, features = ["linux-static-hidraw"] }
zbus = "4.0"
zvariant = "4.0"
nix = { version = "0.27", features = ["fs", "uio"] }

[target.'cfg(target_os = "windows")'.dependencies]
hidapi = { version = "2.6", default-features = false, features = ["windows-native"] }

[target.'cfg(not(target_os = "windows"))'.dependencies]
libc = "0.2"

[[bin]]
name = "frost-tune-hid-helper"
path = "src/bin/frost-tune-hid-helper.rs"

[profile.release]
strip = true
lto = true
codegen-units = 1
panic = "abort"
